tests/negative/Internal/ExplicitInstanceArgument.juvix
module ExplicitInstanceArgument;

type Unit := unit;

type Box A := box A;

trait
type T A := mkT { pp : A → A };

instance
unitT : T Unit := mkT (pp := λ{_ := unit});

instance
boxT {A} (x : Box A) : T (Box A) := mkT (pp := \{_ := x});

main : Box Unit := T.pp (box unit);
